<resources>
    <string name="app_name">ArtTree</string>

    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="password_invalid">Invalid password.</string>
    <string name="id_not_matches_regex">ID must be between 4 and 20 characters.</string>
    <string name="password_not_matches_regex">Password must be between 4 and 20 characters.</string>
    <string name="nickname_required">The Nickname field is required.</string>
    <string name="nickname_over_chars">The length of nickname must be less than 20 characters.</string>
    <string name="id_already_exists">The ID you entered is already exists.</string>
    <string name="enter_new_password">New Password (Between 4 and 20 characters)</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="email_invalid">Invalid email.</string>
    <string name="password_changed_successfully">Password changed successfully.</string>
    <string name="password_change_failed">Failed to change password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="nickname">Nickname</string>
    <string name="introduction">Introduction</string>
    <string name="profile">Profile</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="profile_icon_image">Profile Icon Image</string>
    <string name="header">Header</string>
    <string name="header_image">Header Image</string>
    <string name="sign_up_completed">Welcome! Please Sign in with your ID and Password.</string>
    <string name="signed_in">Welcome, %1$s.</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_code">Send Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_email">Please enter your email address.</string>
    <string name="sent_code">A mail with a verification code was sent to your email.</string>
    <string name="could_not_send_code">Could not send a mail. Please check your address and internet connection.</string>
    <string name="do_not_match_code">The code does not match.</string>
    <string name="check_verification">The verification is required.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_alert_message">Are you sure you want to delete your account?</string>
    <string name="delete_account_completed">Account deleted successfully. Good bye, %1$s.</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="enter_keyword">Enter a keyword</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="my_page">My Page</string>
    <string name="content">Content</string>
    <string name="content_type">Content Type</string>
    <string name="image">Image</string>
    <string name="sound">Sound</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="drawing">Drawing</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="cartoon">Cartoon</string>
    <string name="novel">Novel</string>
    <string name="etc">etc.</string>
    <string name="comments">Comments</string>
    <string name="uploaded_content">Uploaded Content</string>
    <string name="likes">Total Likes</string>
    <string name="liked_content">Liked Content</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="my_content">My Content</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="application_settings">Application Settings</string>
    <string name="change_language">Change Language</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="enter_here">Enter here</string>
    <string name="touch_to_edit">Touch to edit</string>
    <string name="enter_id">ID (Between 4 and 20 characters)</string>
    <string name="enter_password">Password (Between 4 and 20 characters)</string>
    <string name="enter_nickname">Nickname (Maximum 20 characters)</string>
    <string name="enter_introduction">Introduction (Maximum 200 characters)</string>
    <string name="enter_title">Title (Maximum 50 characters)</string>
    <string name="enter_description">Description (Maximum 200 characters)</string>
    <string name="enter_tag">Tags (Maximum 5, Maximum 20 characters per one)</string>
    <string name="sign_out_alert_title">Signing Out</string>
    <string name="id_email">ID/Email</string>
    <string name="sign_out_alert_message">Are you sure you want to sign out?</string>
    <string name="delete_alert_message">Are you sure you want to delete?</string>
    <string name="sign_in_failed">Failed to sign in. Please check your ID and password.</string>
    <string name="title_not_entered">Title is a required field.</string>
    <string name="title_over_chars">The length of title must be less than 50 characters.</string>
    <string name="description_over_chars">The length of description must be less than 200 characters.</string>
    <string name="tag_not_entered">Please enter your tag.</string>
    <string name="tag_over_chars">The length of Tag must be less than 20 characters.</string>
    <string name="tag_entered_slash">A tag cannot contains the character \'/\'.</string>
    <string name="multiple_upload_over_items">The number of files must be less than 20.</string>
    <string name="comment_over_chars">Comment: The length of comment must be less than 200 characters.</string>
    <string name="file_not_uploaded">Choose a file to upload.</string>
    <string name="text_not_entered">Write your text to upload.</string>
    <string name="upload_completed">Uploaded Successfully.</string>
    <string name="delete_completed">Deleted Successfully.</string>
    <string name="mypage_edit_completed">Edited Successfully. Images will be changed after a while.</string>
    <string name="settings_completed">Settings Completed.</string>
    <string name="subscribe_myself">Cannot subscribe yourself.</string>
    <string name="server_error">The server has caused an error.</string>
    <string name="code_error">A code error has occured.</string>
    <string name="response_error">Failed to receive the response from the server.</string>
    <string name="loading">Loading...</string>
    <string name="uploading">Uploading...</string>
    <string name="not_selected">Nothing selected</string>
</resources>