<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.creators.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/main_home" />

    <fragment
        android:id="@+id/navigation_categoryList"
        android:name="com.example.creators.fragments.CategoryListFragment"
        android:label="@string/category_list"
        tools:layout="@layout/main_categorylist" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.creators.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/main_search" />

    <fragment
        android:id="@+id/navigation_myPage"
        android:name="com.example.creators.fragments.MyPageFragment"
        android:label="@string/my_page"
        tools:layout="@layout/main_mypage" />
</navigation>