<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settingspass_img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_left" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/settings"
                android:textAlignment="gravity"
                android:textSize="@dimen/textSize_large">

            </TextView>

        </LinearLayout>

    </FrameLayout>

    <View
        android:id="@+id/view18"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/textSize_normal">

        </TextView>

        <EditText
            android:id="@+id/settingspass_edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_here"
            android:maxLength="20"
            android:textSize="@dimen/textSize_normal" />`
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_normal"
            android:text="@string/enter_new_password">

        </TextView>

        <EditText
            android:id="@+id/settingspass_edt_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_here"
            android:maxLength="20"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/textSize_normal" />`
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textSize="@dimen/textSize_normal"
            android:text="@string/confirm_new_password" />

        <EditText
            android:id="@+id/settingspass_edt_newPassCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_here"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/textSize_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/settingspass_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button1"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>