<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settings_img_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/settings"
                android:textAlignment="gravity"
                android:textSize="20dp">

            </TextView>

        </LinearLayout>

    </FrameLayout>

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/main_color" />

    <LinearLayout
        android:id="@+id/settings_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/settings_img_account"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_down" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_accountMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/settings_txt_changePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/change_password"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/settings_txt_changeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/change_email"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/settings_txt_changePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/change_phone_number"
            android:textSize="16dp" />
    </LinearLayout>

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/settings_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_settings"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/settings_img_application"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_down" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_applicationMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/settings_txt_changeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/change_language"
            android:textSize="16dp" />

    </LinearLayout>

    <View
        android:id="@+id/view11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/settings_signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_sign_out"
            android:tint="@color/main_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="@color/main_color"
            android:textSize="20dp" />

    </LinearLayout>

    <View
        android:id="@+id/view12"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grey" />

</LinearLayout>